# regomaster

plant_monitor/: CMakeLists.txt  package.xml
plant_monitor/config/: config.yaml
plant_monitor/launch/: check_ph.launch.py
plant_monitor/scripts/: check_ph.py  light_control.py
plotter_control/: CMakeLists.txt  package.xml
plotter_control/config/: plotter.yaml
plotter_control/scripts/: check_plants.py  plotter_control.py
regolife_vision/: CMakeLists.txt  package.xml
regolife_vision/config/: vision.yaml
regolife_vision/launch/: detect_plants.launch.py
regolife_vision/scripts/: aruco.py  detect_plants.py
